Updated the files to have pathing that works for GitHub Pages

--- a/admin.html
+++ b/admin.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>POS PlayTime – Admin</title>
 
-  <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="icon" href="/assets/icons/icon-192.png" sizes="192x192" type="image/png" />
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192.png" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="icon" href="assets/icons/icon-192.png" sizes="192x192" type="image/png" />
+  <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
 
-  <link rel="stylesheet" href="/styles.css" />
-  <script defer src="/admin-v4.js"></script>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="admin-v4.js"></script>
 </head>
 <body>
   <header class="app-header">
