Added several items to the POS system Added a menu page with styling and icons for categories

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <audio id="paySound" src="assets/sounds/cha-ching.mp3" preload="auto"></audio>
 
   <header class="app-header">
-    <h1 aria-label="POS PlayTime">🧸 POS PlayTime</h1>
+    <h1 aria-label="POS PlayTime">💰 POS PlayTime</h1>
     <div class="header-actions">
       <button id="viewHistoryBtn" class="secondary">📜 History</button>
       <button id="adminBtn" class="secondary">⚙️ Admin</button>
