Updated the menu to have all the flavour text. Added the menu-qr.html to allow easier access to the menu for customers.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <h1 aria-label="POS PlayTime">💰 POS PlayTime</h1>
     <div class="header-actions">
       <button id="viewHistoryBtn" class="secondary">📜 History</button>
+      <button id="menuBtn" class="secondary">🍽️ Menu</button>
       <button id="adminBtn" class="secondary">⚙️ Admin</button>
     </div>
   </header>
