--- a/menu.html
+++ b/menu.html
@@ -11,17 +11,12 @@
 <body>
   <header>
     <h1>Our Menu</h1>
-    <p>Fresh, fun, and fairly priced — organized by category.</p>
+    <p>Fresh, fun, and fairly priced.</p>
   </header>
 
   <main class="container" id="menuContainer">
     <!-- Menu will be rendered here -->
   </main>
-
-  <footer>
-    <div>Prices include tax note as applicable • Generated from POS items</div>
-    <div class="print-tip">Tip: Use <kbd>Ctrl/Cmd + P</kbd> to print or save as PDF.</div>
-  </footer>
 
   <!-- Load menu logic -->
    <script src="menu.js"></script>
